@@ -228,3 +228,7 @@ be repoerted.
     
 #36 <getDriverData.py>
     Added timestamp variable in exception on line 99 of getDriverData.py
+
+#37 <all mission modes>
+    The transmission process was changed to call its async function in the __init__, insted of having all the mission modes call the async functions of the transmissions. This change 
+    was made beacuse the transistion between mission modes would cause transmission failure. 
